--- a/style.css
+++ b/style.css
@@ -39,3 +39,53 @@ div{
 .none{
     display: none;
 }
+
+
+/* header navigation area styling */
+.heading_navigation{
+    background-color: #2874f0;
+    height: 56px;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+.nav_container{
+    max-width: 1248px;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    position: relative;
+    left: 50px;
+}
+
+
+/* nav bar logo styling */
+.logo{
+    flex-direction: column;
+    width: fit-content;
+}
+.anchor{
+    cursor: pointer;
+    text-decoration: none;
+    color: whitesmoke;
+}
+.flip_logo img{ 
+    width: 75px;
+}
+.anchor:hover{
+    text-decoration: underline;
+}
+.anchor{
+    font-size: 11px;
+    font-style: italic;
+    margin: -2px;
+}
+.plus img{
+    width: 10px;
+}
+.plus_lan{
+    color: #ffe500;
+    font-weight: 500;
+    margin-right: 0 2px;
+    font-weight: bold;
+}
