--- a/style.css
+++ b/style.css
@@ -89,3 +89,38 @@ div{
     margin-right: 0 2px;
     font-weight: bold;
 }
+
+/* search bar */
+.search_bar_container{
+    min-width: 304px;
+    width: 708px;
+}
+.search_bar{
+    display: inline-block;
+    box-shadow: 0 2px 4px 0 rgb(0,0,0,23%);
+    width: 100%;
+    height: 36px;
+    max-width: 564px;
+    position: relative;
+    margin-left: 10px;
+}
+.search_box{
+    outline: none;
+    padding: 0px 16px;
+    height: 36px;
+    border-radius: 2px 0px 0px 2px;
+    border: 0;
+    width: 100%;
+    font-size: 14px;
+}
+.btn_search{
+    background: #fff;
+    border: 1px solid #fff;
+    padding: 4px 12px 4px 8px;
+    width: 44px;
+    height: 36px;
+    cursor: pointer;
+    border-radius: 0px 2px 2px 0px;
+    color: #2874f0;
+    font-size: 19px;
+}
