--- a/style.css
+++ b/style.css
@@ -124,3 +124,178 @@ div{
     color: #2874f0;
     font-size: 19px;
 }
+
+/* login Btn Styling */
+.login{
+    position: relative;
+    left: 60px;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    
+
+}
+.login button{
+    border-radius: 2px;
+    border: 1px solid #dbdbdb;
+    padding: 5px 40px;
+    font-weight: 500;
+    height: 32px;
+    font-size: 16px;
+    letter-spacing: .1px;
+    align-items: center;
+}
+.login button:hover{
+    text-decoration: none;
+    color: #2874f0;
+}
+.login_lan{
+    color: #2874f0;
+    font-weight: bold !important;
+    letter-spacing: .1px;
+    font-size: 16px;
+}
+
+/* login box styling */
+.box{
+    border-radius:3px;
+    position: absolute;
+    top: 350px;
+    transform:translate(-50%,-50%);
+    max-width:750px;
+    min-width: 750px;
+    height: 528px;
+    background:white;
+    overflow: hidden;
+}
+.inline-text{
+    color:white;
+    position: absolute;
+    top: 32px;
+    left: 55px;
+  
+}
+.inline-text h1{
+font-size:28px;
+font-weight: 500;
+margin-bottom: 20px;
+}
+.inline-text p{
+    color:rgb(228, 228, 228);
+    
+    font-size:18px;
+    letter-spacing: 1px;
+    margin-top: 16px;
+    line-height: 150%;
+}
+.box1{
+    
+    background:url(//img1a.flixcart.com/www/linchpin/fk-cp-zion/img/login_img_dec4bf.png);
+    height: 100vh;
+    background-position:center;
+    background-repeat: no-repeat;
+   background-color:#2874f0;
+}
+.box2 .user-id{
+    position: relative;
+    left:20px;
+    top:50px;
+    padding:10px 20px;
+    
+}
+.box2 .user-id input{
+    width:100%;
+    height: 40px; 
+   
+    
+}
+.box2  .user-data input {
+    /* font-size:18px; */
+    color:black;
+    border:none;
+    border-bottom:1px solid rgb(228, 228, 228);
+    outline:none;
+    background:none;
+    transition: 0.5s;
+    margin-bottom:20px;
+
+    
+}
+.box2 .user-data label{
+    color:rgb(158, 154, 154);
+    padding:10px 20px;
+    position: absolute;;
+    top: 6px;
+    left: 0;
+    font-size:16px;
+    font-weight:400;
+    pointer-events: none;
+    transition:0.5s;
+    
+}
+.box2 .user-data input:focus ~ label,
+.box2 .user-data input:valid ~ label{
+    top:-20px;
+    font-size:12px;
+   
+}
+.box2 .user-data input:focus{
+    border-bottom:1px solid #2874f0;
+}
+.box2  span a{
+    position: absolute;
+    top: 140px;
+    left: 315px;
+    display:inline;
+    color:#2874f0;
+    font-weight: 600;
+}
+.box2  .button input{
+    height:50px;
+    font-size:18px;
+    border:none;
+    background:#fff;
+    
+}
+.user-id p{
+    margin:0;
+    margin-left:148px;
+    color:rgb(173, 173, 173);
+}
+.box2 .closebtn_log button{
+    padding-left: 100px;
+    
+}
+.box2  .button input[type=submit]{
+    background:#fb641b;
+    border-radius: 2px;
+    color:white;
+    font-weight:500;
+    font-size:15px;
+    outline:none;
+    transition:0.5s;
+    margin-top:none;
+}
+.box2  .button input[type=reset]{
+    box-shadow:2px 1px 5px 0 rgba(0,0,0,0.2);
+    border-radius: 2px;
+    color:#2874f0;
+    font-weight:600;
+    outline:none;
+    transition: 0.5s;
+    font-size: 15px;
+}
+.box2  .button input[type=submit]:hover{
+    box-shadow:2px 3px 5px 0 rgba(0,0,0,0.2);
+}
+.box2  .button input[type=reset]:hover{
+    box-shadow:2px 2px 10px 0 rgba(0,0,0,0.2)
+}
+.user-id .footer a{
+    position: absolute;
+    top: 70px;
+    left: 51px;
+    font-weight:600;
+    text-decoration:none;
+    color:#2874f0;
+}
