--- a/style.css
+++ b/style.css
@@ -299,3 +299,11 @@ margin-bottom: 20px;
     text-decoration:none;
     color:#2874f0;
 }
+
+.dropdown:hover .dropdown-menu{
+    display: block;
+}
+.dropdown-menu {
+    white-space: nowrap;
+    width: 250px !important;
+}
