--- a/style.css
+++ b/style.css
@@ -19,3 +19,18 @@ div{
 }
 
 
+/* product nav styling */
+.heading_categories{
+    background: #fff;
+    justify-content: center;
+    min-height: 112px;
+    border-bottom: 2px solid lightgray;
+}
+.heading_category_list{
+    list-style: none;
+    max-width: 1280px;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: -2rem;
+    margin-top: 0;
+}
