--- a/style.css
+++ b/style.css
@@ -386,3 +386,62 @@ margin-bottom: 20px;
     left: 50%;
 
 }
+
+/* Carousel */
+.carousel{
+    padding: 15px 5px 0px 5px;
+    width: 100%;
+    height: 280px;
+    position: absolute;
+}
+.carousel-control.left, .carousel-control.right {
+    background: none !important;
+    filter: none !important;
+    progid: none !important;
+    outline: 0;
+}
+.carousel .carousel-control {
+    visibility: hidden;
+}
+.carousel:hover .carousel-control {
+    visibility: visible;
+}
+.prev_icon{
+    display: inline;
+    width: 47px;
+    height: 104px;
+    left: 0;
+    display: flex;
+    position: absolute;
+    justify-content: space-around;
+    align-items: center;
+    top: calc(50% - 52px);
+    background-color: hsla(0,0%,100%,.98);
+    box-shadow: 0 1px 5px 0 rgb(0,0,0,11%);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+
+}
+.carousel-control-prev-icon{
+    background-image: url(/images/logo/greater-than-sign-icon-36381.jpg);
+    transform: rotate(180deg);
+    
+}
+.next_icon{
+    display: inline;
+    width: 47px;
+    height: 104px;
+    right: 0px;
+    display: flex;
+    position: absolute;
+    justify-content: space-around;
+    align-items: center;
+    top: calc(50% - 52px);
+    background-color: hsla(0,0%,100%,.98);
+    box-shadow: 0 1px 5px 0 rgb(0,0,0,11%);
+    border-bottom-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+.carousel-control-next-icon{
+    background-image: url(/images/logo/greater-than-sign-icon-36381.jpg);
+}
