--- a/style.css
+++ b/style.css
@@ -445,3 +445,61 @@ margin-bottom: 20px;
 .carousel-control-next-icon{
     background-image: url(/images/logo/greater-than-sign-icon-36381.jpg);
 }
+
+/* Product section styling */
+.slider-heading h4{
+    font-size: 1.5em;
+    margin-bottom: 0;
+}
+.slider-heading h6{
+    font-size: .9em;
+    margin-bottom: 0;
+}
+
+
+/* content highlight styling */
+.view-btn{
+    display: flex;
+    justify-content: flex-end;
+}
+.view-btn button{
+    font-size: 13px;
+    padding: 10px 20px;
+    border-radius: 2px;
+    font-weight: bold;
+    background: #2874f0;
+}
+.view-btn button:hover{
+    background: #2874f0;
+}
+.sales{
+    cursor: pointer;
+    height: 15em;
+    padding: 0em 1em;
+    margin: .1em .2em;
+    width: 13em;
+    box-sizing: border-box;
+    border: 0;
+}
+.sales img{
+    height: 60%;
+    transform: scale(.97);
+}
+.sales img:hover{
+    transform: scale(1);
+}
+.sales a{
+    text-decoration: none;
+    color: #388e3c;
+    font-size: .95em;
+}
+.sales h6{
+    color: black;
+    font-size: .9em;
+}
+.sales p{
+    color: #212121;
+    opacity: .6;
+    font-size: .85em;
+    margin-top: .6em;
+}
